Replace com.google.common.base.Function