@@ -18,73 +18,30 @@ package com.github.tomakehurst.wiremock.core;
 import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.NOT_MATCHED;
 import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.TO_LOGGED_REQUEST;
 import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.collect.Iterables.contains;
-import static com.google.common.collect.Iterables.transform;
 
 import com.github.tomakehurst.wiremock.admin.AdminRoutes;
 import com.github.tomakehurst.wiremock.admin.LimitAndOffsetPaginator;
-import com.github.tomakehurst.wiremock.admin.model.GetGlobalSettingsResult;
-import com.github.tomakehurst.wiremock.admin.model.GetScenariosResult;
-import com.github.tomakehurst.wiremock.admin.model.GetServeEventsResult;
-import com.github.tomakehurst.wiremock.admin.model.ListStubMappingsResult;
-import com.github.tomakehurst.wiremock.admin.model.ServeEventQuery;
-import com.github.tomakehurst.wiremock.admin.model.SingleServedStubResult;
-import com.github.tomakehurst.wiremock.admin.model.SingleStubMappingResult;
+import com.github.tomakehurst.wiremock.admin.model.*;
 import com.github.tomakehurst.wiremock.common.BrowserProxySettings;
 import com.github.tomakehurst.wiremock.common.FileSource;
 import com.github.tomakehurst.wiremock.common.xml.Xml;
-import com.github.tomakehurst.wiremock.extension.AdminApiExtension;
-import com.github.tomakehurst.wiremock.extension.GlobalSettingsListener;
-import com.github.tomakehurst.wiremock.extension.PostServeAction;
-import com.github.tomakehurst.wiremock.extension.ResponseDefinitionTransformer;
-import com.github.tomakehurst.wiremock.extension.ResponseTransformer;
-import com.github.tomakehurst.wiremock.extension.StubLifecycleListener;
+import com.github.tomakehurst.wiremock.extension.*;
 import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilter;
 import com.github.tomakehurst.wiremock.global.GlobalSettings;
-import com.github.tomakehurst.wiremock.http.AdminRequestHandler;
-import com.github.tomakehurst.wiremock.http.BasicResponseRenderer;
-import com.github.tomakehurst.wiremock.http.ProxyResponseRenderer;
-import com.github.tomakehurst.wiremock.http.Request;
-import com.github.tomakehurst.wiremock.http.ResponseDefinition;
-import com.github.tomakehurst.wiremock.http.StubRequestHandler;
-import com.github.tomakehurst.wiremock.http.StubResponseRenderer;
+import com.github.tomakehurst.wiremock.http.*;
 import com.github.tomakehurst.wiremock.matching.RequestMatcherExtension;
 import com.github.tomakehurst.wiremock.matching.RequestPattern;
 import com.github.tomakehurst.wiremock.matching.StringValuePattern;
-import com.github.tomakehurst.wiremock.recording.RecordSpec;
-import com.github.tomakehurst.wiremock.recording.RecordSpecBuilder;
-import com.github.tomakehurst.wiremock.recording.Recorder;
-import com.github.tomakehurst.wiremock.recording.RecordingStatusResult;
-import com.github.tomakehurst.wiremock.recording.SnapshotRecordResult;
+import com.github.tomakehurst.wiremock.recording.*;
 import com.github.tomakehurst.wiremock.standalone.MappingsLoader;
 import com.github.tomakehurst.wiremock.store.DefaultStores;
 import com.github.tomakehurst.wiremock.store.SettingsStore;
 import com.github.tomakehurst.wiremock.store.Stores;
-import com.github.tomakehurst.wiremock.stubbing.InMemoryScenarios;
-import com.github.tomakehurst.wiremock.stubbing.Scenarios;
-import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
-import com.github.tomakehurst.wiremock.stubbing.StoreBackedStubMappings;
-import com.github.tomakehurst.wiremock.stubbing.StubImport;
-import com.github.tomakehurst.wiremock.stubbing.StubImport.Options.DuplicatePolicy;
-import com.github.tomakehurst.wiremock.stubbing.StubMapping;
-import com.github.tomakehurst.wiremock.stubbing.StubMappings;
-import com.github.tomakehurst.wiremock.verification.DisabledRequestJournal;
-import com.github.tomakehurst.wiremock.verification.FindNearMissesResult;
-import com.github.tomakehurst.wiremock.verification.FindRequestsResult;
-import com.github.tomakehurst.wiremock.verification.FindServeEventsResult;
-import com.github.tomakehurst.wiremock.verification.LoggedRequest;
-import com.github.tomakehurst.wiremock.verification.NearMiss;
-import com.github.tomakehurst.wiremock.verification.NearMissCalculator;
-import com.github.tomakehurst.wiremock.verification.RequestJournal;
-import com.github.tomakehurst.wiremock.verification.RequestJournalDisabledException;
-import com.github.tomakehurst.wiremock.verification.StoreBackedRequestJournal;
-import com.github.tomakehurst.wiremock.verification.VerificationResult;
-import com.google.common.base.Function;
+import com.github.tomakehurst.wiremock.stubbing.*;
+import com.github.tomakehurst.wiremock.verification.*;
 import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableList.Builder;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -243,20 +200,14 @@ public class WireMockApp implements StubServer, Admin {
 
   private List<RequestFilter> getAdminRequestFilters() {
     return options.extensionsOfType(RequestFilter.class).values().stream()
-        .filter(filter -> filter.applyToAdmin())
+        .filter(RequestFilter::applyToAdmin)
         .collect(Collectors.toList());
   }
 
   private List<RequestFilter> getStubRequestFilters() {
-    return from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToStubs();
-              }
-            })
-        .toList();
+    return options.extensionsOfType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToStubs)
+        .collect(Collectors.toList());
   }
 
   private void loadDefaultMappings() {
@@ -441,16 +392,11 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public FindNearMissesResult findNearMissesForUnmatchedRequests() {
-    Builder<NearMiss> listBuilder = ImmutableList.builder();
-    Iterable<ServeEvent> unmatchedServeEvents =
-        from(requestJournal.getAllServeEvents())
-            .filter(
-                new Predicate<ServeEvent>() {
-                  @Override
-                  public boolean apply(ServeEvent input) {
-                    return input.isNoExactMatch();
-                  }
-                });
+    ImmutableList.Builder<NearMiss> listBuilder = ImmutableList.builder();
+    List<ServeEvent> unmatchedServeEvents =
+        requestJournal.getAllServeEvents().stream()
+            .filter(ServeEvent::isNoExactMatch)
+            .collect(Collectors.toList());
 
     for (ServeEvent serveEvent : unmatchedServeEvents) {
       listBuilder.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
@@ -580,7 +526,7 @@ public class WireMockApp implements StubServer, Admin {
     for (int i = mappings.size() - 1; i >= 0; i--) {
       StubMapping mapping = mappings.get(i);
       if (mapping.getId() != null && getStubMapping(mapping.getId()).isPresent()) {
-        if (importOptions.getDuplicatePolicy() == DuplicatePolicy.OVERWRITE) {
+        if (importOptions.getDuplicatePolicy() == StubImport.Options.DuplicatePolicy.OVERWRITE) {
           editStubMapping(mapping);
         }
       } else {
@@ -589,15 +535,7 @@ public class WireMockApp implements StubServer, Admin {
     }
 
     if (importOptions.getDeleteAllNotInImport()) {
-      Iterable<UUID> ids =
-          transform(
-              mappings,
-              new Function<StubMapping, UUID>() {
-                @Override
-                public UUID apply(StubMapping input) {
-                  return input.getId();
-                }
-              });
+      Iterable<UUID> ids = mappings.stream().map(StubMapping::getId).collect(Collectors.toList());
       for (StubMapping mapping : listAllStubMappings().getMappings()) {
         if (!contains(ids, mapping.getId())) {
           removeStubMapping(mapping);
